Update Greek transcriptions

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -198,7 +198,7 @@
 					</blockquote>
 					<blockquote epub:type="z3998:verse">
 						<p xml:lang="grc">
-							<span>ἠέ συ Πηλεΐδη, πάντων ἐκπαγλότατ᾿ ἀνδρῶν</span>
+							<span>ἠέ συ Πηλεΐδη, πάντων ἐκπαγλότατ’ ἀνδρῶν</span>
 						</p>
 						<cite>—⁠<i epub:type="se:name.publication.poem">Iliad</i> <span epub:type="z3998:roman">v</span> 146.</cite>
 					</blockquote>
@@ -302,13 +302,13 @@
 					<p>This is also from Homer, <i epub:type="se:name.publication.poem">Iliad</i> θ, 95. Pope’s Version, 120. <a href="book-6.xhtml#noteref-65" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-66" epub:type="endnote">
-					<p>This is a parody on Homer, <i epub:type="se:name.publication.poem">Iliad</i> ξ, 95, where the line ends <i xml:lang="grc">οἷ᾿ ἀγορεύεις</i>⁠—“if such is your language,” which Diogenes here changes to <i xml:lang="grc">οἷ᾿ ἀγοράζεις</i>, if you buy such things. <a href="book-6.xhtml#noteref-66" epub:type="backlink">↩</a></p>
+					<p>This is a parody on Homer, <i epub:type="se:name.publication.poem">Iliad</i> ξ, 95, where the line ends <i xml:lang="grc">οἷ’ ἀγορεύεις</i>⁠—“if such is your language,” which Diogenes here changes to <i xml:lang="grc">οἷ’ ἀγοράζεις</i>, if you buy such things. <a href="book-6.xhtml#noteref-66" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-67" epub:type="endnote">
 					<p>This is a line of the <i epub:type="se:name.publication.play">Phoenissae</i> of Euripides, <span epub:type="z3998:roman">v</span> 40. <a href="book-6.xhtml#noteref-67" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-68" epub:type="endnote">
-					<p>The pun here is on the similarity of the noun <i xml:lang="grc">ἐλάαν</i>, an olive, to the verb <i xml:lang="grc">ἐλαᾶν</i>, to drive; the words <i xml:lang="grc">μάστιξεν δ᾿ ἐλαᾶν</i> are of frequent occurrence in Homer. <a href="book-6.xhtml#noteref-68" epub:type="backlink">↩</a></p>
+					<p>The pun here is on the similarity of the noun <i xml:lang="grc">ἐλάαν</i>, an olive, to the verb <i xml:lang="grc">ἐλαᾶν</i>, to drive; the words <i xml:lang="grc">μάστιξεν δ’ ἐλαᾶν</i> are of frequent occurrence in Homer. <a href="book-6.xhtml#noteref-68" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-69" epub:type="endnote">
 					<p>This line occurs, Homer, <i epub:type="se:name.publication.poem">Iliad</i> ε, 83. <a href="book-6.xhtml#noteref-69" epub:type="backlink">↩</a></p>
@@ -679,7 +679,7 @@
 					<p>This is slightly parodied from Homer, <i epub:type="se:name.publication.poem">Odyssey</i> <span epub:type="z3998:roman">xi</span>. 278. Pope’s Version, 337. <a href="book-8.xhtml#noteref-118" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-119" epub:type="endnote">
-					<p>There were three festivals of Bacchus at Athens at which dramatic contests took place, the <i xml:lang="grc">Διονύσια κατ᾿ ἄγρους</i>, or, “in the fields;” the <i xml:lang="grc">Ληναῖα</i> or <i xml:lang="grc">τὰ ἐν Λίμναις</i>, or “the marshes,” a part of the city near the Acropolis, in which was situated the <i xml:lang="grc">Λήναιον</i>, an enclosure dedicated to Bacchus; and the <i xml:lang="grc">τὰ ἐν ἄστει</i>, “in the city,” or <i xml:lang="grc">τὰ μέγαλα Διονύσια</i>. The comic contests usually took place at the second or Lenaean festivals. Sometimes also at the Great Dionysia. <a href="book-8.xhtml#noteref-119" epub:type="backlink">↩</a></p>
+					<p>There were three festivals of Bacchus at Athens at which dramatic contests took place, the <i xml:lang="grc">Διονύσια κατ’ ἄγρους</i>, or, “in the fields;” the <i xml:lang="grc">Ληναῖα</i> or <i xml:lang="grc">τὰ ἐν Λίμναις</i>, or “the marshes,” a part of the city near the Acropolis, in which was situated the <i xml:lang="grc">Λήναιον</i>, an enclosure dedicated to Bacchus; and the <i xml:lang="grc">τὰ ἐν ἄστει</i>, “in the city,” or <i xml:lang="grc">τὰ μέγαλα Διονύσια</i>. The comic contests usually took place at the second or Lenaean festivals. Sometimes also at the Great Dionysia. <a href="book-8.xhtml#noteref-119" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-120" epub:type="endnote">
 					<p><i xml:lang="grc">ἔνδοξος</i>, glorious. <a href="book-8.xhtml#noteref-120" epub:type="backlink">↩</a></p>
