Update Greek transcriptions

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -215,7 +215,7 @@
 						<p>
 							<span>Ὦ πέπον Ἀρχύτα, ψαλληγενὲς, ὀλβιότυφε</span>
 							<br/>
-							<span>Τῆς ὑπάτης ἔριδος πάντων ἐμπειρότατ᾿ ἀνδρῶν.</span>
+							<span>Τῆς ὑπάτης ἔριδος πάντων ἐμπειρότατ’ ἀνδρῶν.</span>
 						</p>
 					</blockquote>
 					<p>
@@ -349,7 +349,7 @@
 						<p>
 							<span>Γνώμῃ γὰρ ἀνδρὸς εὖ μὲν οἰκοῦνται πόλεις,</span>
 							<br/>
-							<span>Εὖ δ᾿ οἶκος εἴς τ᾿ αὖ πόλεμον ἰσχύει μέγα.</span>
+							<span>Εὖ δ’ οἶκος εἴς τ’ αὖ πόλεμον ἰσχύει μέγα.</span>
 						</p>
 					</blockquote>
 					<p>Which may be translated:</p>
@@ -380,7 +380,7 @@
 						<p>
 							<span>Κεῖνος μὲν πανάριστος ὃς εὖ εἰπόντι πίθηται,</span>
 							<br/>
-							<span>Ἐσθλὸς δ᾿ αὖ κἀκεῖνος ὃς αὐτὸς πάντα νοήσῃ.</span>
+							<span>Ἐσθλὸς δ’ αὖ κἀκεῖνος ὃς αὐτὸς πάντα νοήσῃ.</span>
 						</p>
 					</blockquote>
 					<p>The lines in Hesiod are:</p>
@@ -388,7 +388,7 @@
 						<p xml:lang="grc">
 							<span>Κεῖνος μὲν πανάριστος ὃς αὐτὸς πάντα νοήσῃ</span>
 							<br/>
-							<span>Ἐσθλὸς δ᾿ αὖ κἀκεῖνος ὃς εὖ εἰπόντι πίθηται.</span>
+							<span>Ἐσθλὸς δ’ αὖ κἀκεῖνος ὃς εὖ εἰπόντι πίθηται.</span>
 						</p>
 						<cite>—⁠<i epub:type="se:name.publication.poem" xml:lang="la">Opera et Dies</i> 293.</cite>
 					</blockquote>
