Add z3998:name-title semantic to some abbreviations

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -232,7 +232,7 @@
 					<p><i epub:type="se:name.publication.poem">Iliad</i> 18, 95. <a href="book-5.xhtml#noteref-45" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-46" epub:type="endnote">
-					<p>This very spirited version I owe to the kindness of my brother, the <abbr>Rev.</abbr> <abbr epub:type="z3998:given-name">J. E.</abbr> Yonge, of Eton College. <a href="book-5.xhtml#noteref-46" epub:type="backlink">↩</a></p>
+					<p>This very spirited version I owe to the kindness of my brother, the <abbr epub:type="z3998:name-title">Rev.</abbr> <abbr epub:type="z3998:given-name">J. E.</abbr> Yonge, of Eton College. <a href="book-5.xhtml#noteref-46" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-47" epub:type="endnote">
 					<p>“<i xml:lang="grc">ἐντελέχεια</i>, the actuality of a thing, as opposed to simple capability or potentiality (<i xml:lang="grc">δύναμις</i>); a philosophic word invented by Aristotle.⁠—⁠ ⁠… quite distinct from <i xml:lang="grc">ἐνδελέχεια</i>, though Cicero (<i epub:type="se:name.publication.book">Tusculan Disputations</i> <span epub:type="z3998:roman">i</span>, 10,) confounded them.” <cite>—⁠Liddle and Scott in <abbr>voc.</abbr></cite> <a href="book-5.xhtml#noteref-47" epub:type="backlink">↩</a></p>
