--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -28,7 +28,7 @@
 			<a href="https://books.google.com/books?id=1sEIAAAAQAAJ">Google Books</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Saint Jerome</i>,<br/>
-			a painting completed around 1621 by<br/>
+			a painting completed circa 1621 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Hendrick_ter_Brugghen">Hendrick ter Brugghen</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
