Add 'role="presentation"' to headers and footers in blockquotes

--- a/src/epub/text/book-1.xhtml
+++ b/src/epub/text/book-1.xhtml
@@ -226,13 +226,13 @@
 				<p class="continued">There is also a difference of opinion with respect to their number. Leander inserts in the number instead of Cleobulus and Myson, Leophantus Gorsias, a native of either Lebedos or Ephesus; and Epimenides, the Cretan; Plato, in his <i epub:type="se:name.publication.book">Protagoras</i>, reckons Myson among them instead of Periander. And Ephorus mentions Anacharsis in the place of Myson; some also add Pythagoras to the number. Dicaearchus speaks of four, as universally agreed upon: Thales, Bias, Pittacus, and Solon; and then enumerates six more, of whom we are to select three, namely, Aristodemus, Pamphilus, Chilo the Lacedaemonian, Cleobulus, Anacharsis, and Periander. Some add Acusilaus of Argos, the son of Cabas, or Scabras. But Hermippus, in his <i epub:type="se:name.publication.book">Treatise on the Wise Men</i> says that there were altogether seventeen, out of whom different authors selected different individuals to make up the seven. These seventeen were Solon, Thales, Pittacus, Bias, Chilo, Myson, Cleobulus, Periander, Anacharsis, Acusilaus, Epimenides, Leophantus, Pherecydes, Aristodemus, Pythagoras, Lasus the son of Charmantides, or Sisymbrinus, or as Aristoxenus calls him the son of Chabrinus, a citizen of Hermione, and Anaxagoras. But Hippobotus in his <i epub:type="se:name.publication.book">Description of the Philosophers</i> enumerates among them Orpheus, Linus, Solon, Periander, Anacharsis, Cleobulus, Myson, Thales, Bias, Pittacus, Epicharmus, and Pythagoras.</p>
 				<p>The following letters are preserved as having been written by Thales:</p>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p>Thales to Pherecydes</p>
 					</header>
 					<p>I hear that you are disposed, as no other Ionian has been, to discourse to the Greeks about divine things, and perhaps it will be wiser of you to reserve for your own friends what you write rather than to entrust it to any chance people, without any advantage. If therefore it is agreeable to you, I should be glad to become a pupil of yours as to the matters about which you write; and if you invite me I will come to you to Syros; for Solon the Athenian and I must be out of our senses if we sailed to Crete to investigate the history of that country, and to Egypt for the purpose of conferring with the priests and astronomers who are to be found there, and yet are unwilling to make a voyage to you; for Solon will come too, if you will give him leave, for as you are fond of your present habitation you are not likely to come to Ionia, nor are you desirous of seeing strangers; but you rather, as I hope, devote yourself wholly to the occupation of writing. We, on the other hand, who write nothing, travel over all Greece and Asia.</p>
 				</blockquote>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p>Thales to Solon</p>
 					</header>
 					<p>If you should leave Athens it appears to me that you would find a home at Miletus among the colonists of Athens more suitably than anywhere else, for here there are no annoyances of any kind. And if you are indignant because we Milesians are governed by a tyrant, (for you yourself hate all despotic rulers), still at all events you will find it pleasant to live with us for your companions. Bias has also written to invite you to Priene, and if you prefer taking up your abode in the city of the Prieneans, then we ourselves will come thither and settle near you.</p>
@@ -321,7 +321,7 @@
 				<p class="continued">This, then, he said to them.</p>
 				<p>But Pisistratus, when he was leaving Athens, wrote him a letter in the following terms:</p>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p>Pisistratus to Solon</p>
 					</header>
 					<p>I am not the only one of the Greeks who has seized the sovereignty of his country, nor am I one who had no right whatever to do so, since I am of the race of Codrus; for I have only recovered what the Athenians swore that they would give to Codrus and all his family, and what they afterwards deprived them of. And in all other respects I sin neither against men nor against gods, but I allow the Athenians to live under the laws which you established amongst them, and they are now living in a better manner than they would if they were under a democracy; for I allow no one to behave with violence: and I, though I am the tyrant, derive no other advantage beyond my superiority in rank and honor, being content with the fixed honors which belonged to the former kings. And every one of the Athenians brings the tithe of his possessions, not to me, but to the proper place in order that it may be devoted to the public sacrifices of the city; and for any other public purposes, or for any emergencies of war which may arise.</p>
@@ -417,25 +417,25 @@
 				<p>He also, as some say, was the author of the apothegm⁠—“Seek excess in nothing.” And Dioscorides, in his <i epub:type="se:name.publication.book">Commentaries</i>, says that when he was lamenting his son, who was dead (with whose name I am not acquainted), and when someone said to him, “You do no good by weeping,” he replied, “But that is the very reason why I weep, because I do no good.”</p>
 				<p>The following letters also are attributed to him:</p>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p>Solon to Periander</p>
 					</header>
 					<p>You send me word that many people are plotting against you; but if you were to think of putting every one of them out of the way, you would do no good; but someone whom you do not suspect would still plot against you, partly because he would fear for himself, and partly out of dislike to you for fearing all sorts of things; and he would think, too, that he would make the city grateful to him, even if you were not suspected. It is better therefore to abstain from the tyranny, in order to escape from blame. But if you absolutely must be a tyrant, then you had better provide for having a foreign force in the city superior to that of the citizens; and then no one need be formidable to you, nor need you put anyone out of the way.</p>
 				</blockquote>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p>Solon to Epimenides</p>
 					</header>
 					<p>My laws were not destined to be long of service to the Athenians, nor have you done any great good by purifying the city. For neither can the Deity nor lawgivers do much good to cities by themselves; but these people rather give this power, who, from time to time, can lead the people in any opinions they choose; so also the Deity and the laws, when the citizens are well governed, are useful; but when they are ill governed, they are no good. Nor are my laws or all the enactments that I made any better; but those who were in power transgressed them, and did great injury to the commonwealth, inasmuch as they did not hinder Pisistratus from usurping the tyranny. Nor did they believe me when I gave them warning beforehand. But he obtained more credit than I did, who flattered the Athenians while I told him the truth: but I, placing my arms before the principal council-house, being wiser than they, told those who had no suspicion of it that Pisistratus was desirous to make himself a tyrant; and I showed myself more valiant than those who hesitated to defend the state against him. But they condemned the madness of Solon. But at last I spoke loudly⁠—“O my country, I, Solon, here am ready to defend you by word and deed; but to these men I seem to be mad. So I will depart from you, being the only antagonist of Pisistratus; and let these men be his guards if they please.” For you know the man, my friend, and how cleverly he seized upon the tyranny. He first began by being a demagogue; then, having inflicted wounds on himself, he came to the Heliaea, crying out, and saying “that he had been treated in this way by his enemies.” And he entreated the people to assign him as guards four hundred young men; and they, disregarding my advice, gave them to him. And they were all armed with bludgeons. And after that he put down the democracy. They in vain hoped to deliver the poor from their state of slavery, and so now they are all of them slaves to Pisistratus.</p>
 				</blockquote>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p>Solon to Pisistratus</p>
 					</header>
 					<p>I am well assured that I should suffer no evil at your hands. For before your assumption of the tyranny I was a friend of yours, and now my case is not different from that of any other Athenian who is not pleased with tyranny. And whether it is better for them to be governed by one individual, or to live under a democracy, that each person may decide according to his own sentiments. And I admit that of all tyrants you are the best. But I do not judge it to be good for me to return to Athens, lest anyone should blame me for, after having established equality of civil rights among the Athenians, and after having refused to be a tyrant myself when it was in my power, returning now and acquiescing in what you are doing.</p>
 				</blockquote>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p>Solon to Croesus</p>
 					</header>
 					<p>I thank you for your goodwill towards me. And, by Minerva, if I did not think it precious above everything to live in a democracy, I would willingly prefer living in your palace with you to living at Athens, since Pisistratus has made himself tyrant by force. But life is more pleasant to me where justice and equality prevail universally. However, I will come and see you, being anxious to enjoy your hospitality for a season.</p>
@@ -481,7 +481,7 @@
 				</blockquote>
 				<p>One of his sayings was, “Suretyship, and then destruction.” The following letter of his is also extant:</p>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p>Chilo to Periander</p>
 					</header>
 					<p>You desire me to abandon the expedition against the emigrants, as you yourself will go forth. But I think that a sole governor is in a slippery position at home; and I consider that tyrant a fortunate man who dies a natural death in his own house.</p>
@@ -566,7 +566,7 @@
 				<p>Alcaeus calls Pittacus <i xml:lang="grc">σαράπους</i> and <i xml:lang="grc">σάραπος</i>, because he was splayfooted, and used to drag his feet in walking, he also called him <i xml:lang="grc">χειροπόδης</i>, because he had scars on his feet which were called <i xml:lang="grc">χειράδες</i>. And <i xml:lang="grc">γαύρηξ</i>, implying that he gave himself airs without reason. And <i xml:lang="grc">φύσκων</i> and <i xml:lang="grc">γάστρων</i>, because he was fat. He also called him <i xml:lang="grc">ζοφοδορπίδας</i>, because he had weak eyes, and <i xml:lang="grc">ἀγάσυρτος</i>, because he was lazy and dirty. He used to grind corn for the sake of exercise, as Clearchus, the philosopher, relates.</p>
 				<p>There is a letter of his extant, which runs thus:</p>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p>Pittacus to Croesus</p>
 					</header>
 					<p>You invite me to come to Lydia in order that I may see your riches; but I, even without seeing them, do not doubt that the son of Alyattes is the richest of monarchs. But I should get no good by going to Sardis; for I do not want gold myself, but what I have is sufficient for myself and my companions. Still, I will come, in order to become acquainted with you as a hospitable man.</p>
@@ -706,7 +706,7 @@
 				</blockquote>
 				<p>One of his sayings was: “Moderation is the best thing.” He also wrote a letter to Solon in these terms:</p>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p>Cleobulus to Solon</p>
 					</header>
 					<p>You have many friends, and a home everywhere, but yet I think that Lindus will be the most agreeable habitation for Solon, since it enjoys a democratic government, and it is a maritime island, and whoever dwells in it has nothing to fear from Pisistratus, and you will have friends flock to you from all quarters.</p>
@@ -743,14 +743,14 @@
 				<p>And he flourished about the thirty-eighth Olympiad, and enjoyed absolute power for forty years. But Sotion, and Heraclides, and Pamphila, in the fifth book of her <i epub:type="se:name.publication.book">Commentaries</i>, says that there were two Perianders; the one a tyrant, and the other a wise man, and a native of Ambracia. And Neanthes of Cyzicus makes the same assertion, adding that the two men were cousins to one another. And Aristotle says that it was the Corinthian Periander who was the wise one; but Plato contradicts him. The saying⁠—“Practice does everything,” is his. He it was, also, who proposed to cut through the Isthmus.</p>
 				<p>The following letter of his is quoted:</p>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p>Periander to the Wise Men</p>
 					</header>
 					<p>I give great thanks to Apollo of Delphi that my letters are able to determine you all to meet together at Corinth; and I will receive you all, as you may be well assured, in a manner that becomes free citizens. I hear also that last year you met at Sardis, at the court of the King of Lydia. So now do not hesitate to come to me, who am the tyrant of Corinth; for the Corinthians will all be delighted to see you come to the house of Periander.</p>
 				</blockquote>
 				<p>There is this letter too:</p>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p>Periander to Procles</p>
 					</header>
 					<p>The injury of my wife was unintended by me; and you have done wrong in alienating from me the mind of my child. I desire you, therefore, either to restore me to my place in his affections, or I will revenge myself on you; for I have myself made atonement for the death of your daughter, by burning in her tomb the clothes of all the Corinthian women.<a href="endnotes.xhtml#note-16" id="noteref-16" epub:type="noteref">16</a></p>
@@ -784,7 +784,7 @@
 				<p>Of things which are of use in life, he is said to have been the inventor of the anchor, and of the potter’s wheel.</p>
 				<p>The following letter of his is extant:</p>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p>Anacharsis to Croesus</p>
 					</header>
 					<p>O king of the Lydians, I am come to the country of the Greeks, in order to become acquainted with their customs and institutions; but I have no need of gold, and shall be quite contented if I return to Scythia a better man than I left it. However I will come to Sardis, as I think it very desirable to become a friend of yours.</p>
@@ -821,7 +821,7 @@
 				<p>A letter of his is quoted, addressed to Solon the lawgiver, in which he discusses the constitution which Minos gave the Cretans. But Demetrius the Magnesian, in his treatise on Poets and Prose writers of the same name as one another, attempts to prove that the letter is a modern one, and is not written in the Cretan but in the Attic dialect, and the new Attic too.</p>
 				<p>But I have also discovered another letter of his which runs thus:</p>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p>Epimenides to Solon</p>
 					</header>
 					<p>Be of good cheer, my friend; for if Pisistratus had imposed his laws on the Athenians, they being habituated to slavery and not accustomed to good laws previously, he would have maintained his dominion forever, succeeding easily in enslaving his fellow countrymen; but as it is, he is lording it over men who are no cowards, but who remember the precepts of Solon and are indignant at their bonds, and who will not endure the supremacy of a tyrant. But if Pisistratus does possess the city today, still I have no expectation that the supreme power will ever descend to his children. For it is impossible that men who have lived in freedom and in the enjoyment of most excellent laws should be slaves permanently; but as for yourself, do not you go wandering about at random, but come and visit me, for here there is no supreme ruler to be formidable to you; but if while you are wandering about any of the friends of Pisistratus should fall in with you, I fear you might suffer some misfortune.</p>
@@ -908,7 +908,7 @@
 				</blockquote>
 				<p>And he flourished about the fifty-ninth Olympiad. There is a letter of his extant in the following terms:</p>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p>Pherecydes to Thales</p>
 					</header>
 					<p>May you die happily when fate overtakes you. Disease has seized upon me at the same time that I received your letter. I am all over lice, and suffering likewise under a low fever. Accordingly, I have charged my servants to convey this book of mine to you after they have buried me. And do you, if you think fit, after consulting with the other wise men, publish it; but if you do not approve of doing so, then keep it unpublished, for I am not entirely pleased with it myself. The subject is not one about which there is any certain knowledge, nor do I undertake to say that I have arrived at the truth; but I have advanced arguments from which anyone who occupies himself with speculations on the divine nature may make a selection; and as to other points, he must exercise his intellect, for I speak obscurely throughout. I myself, as I am afflicted more severely by this disease every day, no longer admit any physicians or any of my friends. But when they stand at the door, and ask me how I am, I put out my finger to them through the opening of the door, and show them how I am eaten up with the evil; and I desired them to come tomorrow to the funeral of Pherecydes.</p>
