--- a/src/epub/text/book-10.xhtml
+++ b/src/epub/text/book-10.xhtml
@@ -107,7 +107,7 @@
 				<p>They say that there are two passions⁠—pleasure and pain⁠—which affect everything alive. And that the one is natural, and the other foreign to our nature; with reference to which all objects of choice and avoidance are judged of. They say also that there are two kinds of investigation: the one about facts, the other about mere words. And this is as far as an elementary sketch can go⁠—their doctrine about division, and about the criterion.</p>
 				<p>Let us now go to the letter:</p>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p epub:type="z3998:salutation">Epicurus to Herodotus, Wishing He May Do Well</p>
 					</header>
 					<p>For those, O Herodotus, who are not able accurately to comprehend all the things which I have written about nature, nor to investigate those larger books which I have composed on the subject, I have made an abridgment of the whole discussion on this question, as far as I thought sufficient to enable them to recollect accurately the most fundamental points; that so, on all grave occasions, they might be able to assist themselves on the most important and undeniable principles; in proportion as they devoted themselves to speculations on natural philosophy. And here it is necessary for those who have made sufficient progress in their view of the general question, to recollect the principles laid down as elements of the whole discussion; for we have still greater need of a correct notion of the whole than we have even of an accurate understanding of the details. We must, therefore, give preference to the former knowledge, and lay up in our memory those principles on which we may rest, in order to arrive at an exact perception of things, and at a certain knowledge of particular objects.</p>
@@ -188,7 +188,7 @@
 				<p>This then is his letter on physics.</p>
 				<p>About the heavenly bodies he writes thus:</p>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p epub:type="z3998:salutation">Epicurus to Pythocles, Wishing He May Do Well</p>
 					</header>
 					<p>Cleon has brought me your letter, in which you continue to evince towards me an affection worthy of the friendship which I have for you. You devote all your care, you tell me, to engraving in your memory those ideas which contribute to the happiness of life; and you entreat me at the same time to send you a simple abridgment and abstract of my ideas on the heavenly phenomena, in order that you may without difficulty preserve the recollection of them. For, say you, what I have written on this subject in my other works is difficult to recollect, even with continual study.</p>
@@ -249,7 +249,7 @@
 				<p>These are the Epicurean doctrines.</p>
 				<p>We must now proceed to his letter:</p>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p epub:type="z3998:salutation">Epicurus to Menoeceus, Greeting</p>
 					</header>
 					<p>Let no one delay to study philosophy while he is young, and when he is old let him not become weary of the study; for no man can ever find the time unsuitable or too late to study the health of his soul. And he who asserts either that it is not yet time to philosophize, or that the hour is passed, is like a man who should say that the time is not yet come to be happy, or that it is too late. So that both young and old should study philosophy, the one in order that, when he is old, he may be young in good things through the pleasing recollection of the past, and the other in order that he may be at the same time both young and old, in consequence of his absence of fear for the future.</p>
