--- a/src/epub/text/book-2.xhtml
+++ b/src/epub/text/book-2.xhtml
@@ -25,14 +25,14 @@
 				<p>There were also two other persons of the name of Anaximenes, both citizens of Lampsacus: one an orator and the other a historian, who was the son of the sister of the orator, and who wrote an account of the exploits of Alexander.</p>
 				<p>And this philosopher wrote the following letters:</p>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p>Anaximenes to Pythagoras</p>
 					</header>
 					<p>Thales, the son of Euxamias, has died in his old age, by an unfortunate accident. In the evening, as he was accustomed to do, he went forth out of the vestibule of his house with his maidservant, to observe the stars: and (for he had forgotten the existence of the place) while he was looking up towards the skies, he fell down a precipitous place. So now, the astronomer of Miletus has met with this end. But we who were his pupils cherish the recollection of the man, and so do our children and our own pupils: and we will lecture on his principles. At all events, the beginning of all wisdom ought to be attributed to Thales.</p>
 				</blockquote>
 				<p>And again he writes:</p>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p>Anaximenes to Pythagoras</p>
 					</header>
 					<p>You are more prudent than we, in that you have migrated from Samos to Crotona, and live there in peace. For the descendants of Aeacus commit unheard-of crimes, and tyrants never cease to oppress the Milesians. The king of the Medes too is formidable to us: unless, indeed, we choose to become tributary to him. But the Ionians are on the point of engaging in war with the Medes in the cause of universal freedom. For if we remain quiet there is no longer any hope of safety for us. How then can Anaximenes apply his mind to the contemplation of the skies, while he is in perpetual fear of death or slavery? But you are beloved by the people of Crotona, and by all the rest of the Italians; and pupils flock to you, even from Sicily.</p>
