--- a/src/epub/text/book-8.xhtml
+++ b/src/epub/text/book-8.xhtml
@@ -326,7 +326,7 @@
 				</blockquote>
 				<p>There is a letter of this philosopher extant, which is couched in the following terms:</p>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p>Pythagoras to Anaximenes</p>
 					</header>
 					<p>You too, my most excellent friend, if you were not superior to Pythagoras in birth and reputation, would have migrated from Miletus and gone elsewhere. But now the reputation of your father keeps you back, which perhaps would have restrained me too, if I had been like Anaximenes. But if you, who are the most eminent man, abandon the cities, all their ornaments will be taken from them, and the Median power will be more dangerous to them. Nor is it always seasonable to be studying astronomy, but it is more honorable to exhibit a regard for one’s country. And I myself am not always occupied about speculations of my own fancy, but I am busied also with the wars which the Italians are waging against one another.</p>
@@ -604,14 +604,14 @@
 				<p>He was a man held in very general esteem on account of his universal virtue; and he was seven times appointed general of his countrymen, when no one else had ever held the office for more than one year, as the law forbade it to be held for a longer period.</p>
 				<p>Plato wrote his letters to him; as he had begun the correspondence by writing himself to Plato, which he did in the following manner:</p>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p epub:type="z3998:salutation">Archytas to Plato, Greeting</p>
 					</header>
 					<p>I am very glad that you have recovered from your delicate state of health; for you yourself have sent me word of your recovery, and Lamiscus gives the same account. I have been much occupied with some commentaries, and have been among the Lucanians, and have met with the descendants of Ocellus. I have now in my possession, and I send to you the treatises on Law, and Kingly Power, and Piety, and the Creation of the Universe. As for the rest, I have not been able to find them, but whenever I do find any, I will send them to you.</p>
 				</blockquote>
 				<p>Thus wrote Archytas. And Plato sent him an answer in the following terms:</p>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p epub:type="z3998:salutation">Plato to Archytas, Greeting</p>
 					</header>
 					<p>I was exceedingly glad to receive the Commentaries which came from you, and I have admired their author in the greatest possible degree; and he seems to us to be a man worthy of his ancient ancestors. For they are said to have been originally natives of Myra; and to have been among the Trojans, whom Laomedon took with him, gallant men, as the story handed down by tradition attests. As for my Commentaries which you ask me for, they are not yet completed, but such as they are I send them to you. And on the propriety of taking care of such things we are both agreed, so that I have no need to impress anything on you on that head. Farewell.</p>
