--- a/src/epub/text/book-9.xhtml
+++ b/src/epub/text/book-9.xhtml
@@ -62,13 +62,13 @@
 				<p>They say that when he was asked why he preserved silence, he said: “That you may talk.”</p>
 				<p>Darius was very desirous to enjoy his conversation; and wrote thus to him:</p>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p epub:type="z3998:salutation">King Darius, the son of Hystaspes, Addresses Heraclitus of Ephesus, the Wise Man, Greeting Him.</p>
 					</header>
 					<p>You have written a book on Natural Philosophy, difficult to understand and difficult to explain. Accordingly, if in some parts it is explained literally, it seems to disclose a very important theory concerning the universal world, and all that is contained in it, as they are placed in a state of most divine motion. But commonly, the mind is kept in suspense, so that those who have studied your work the most, are not able precisely to disentangle the exact meaning of your expressions. Therefore, king Darius, the son of Hystaspes wishes to enjoy the benefit of hearing you discourse, and of receiving some Grecian instruction. Come, therefore, quickly to my sight, and to my royal palace; for the Greeks, in general, do not accord to wise men the distinction which they deserve, and disregard the admirable expositions delivered by them, which are, however, worthy of being seriously listened to and studied; but with me you shall have every kind of distinction and honor, and you shall enjoy every day honorable and worthy conversation, and your pupils’ life shall become virtuous, in accordance with your precepts.</p>
 				</blockquote>
 				<blockquote epub:type="z3998:letter">
-					<header>
+					<header role="presentation">
 						<p epub:type="z3998:salutation">Heraclitus, of Ephesus, to King Darius, the Son of Hystaspes, Greeting</p>
 					</header>
 					<p>All the men that exist in the world are far removed from truth and just dealings; but they are full of evil foolishness, which leads them to insatiable covetousness and vainglorious ambition. I, however, forgetting all their worthlessness, and shunning satiety, and who wish to avoid all envy on the part of my countrymen, and all appearance of arrogance, will never come to Persia, since I am quite contented with a little, and live as best suits my own inclination.</p>
