--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -21,7 +21,7 @@
 			by<br/>
 			<a href="https://sniggle.net/TPL/">David <abbr epub:type="z3998:given-name">M.</abbr> Gross</a>,<br/>
 			and is based on a transcription produced in 2018 by<br/>
-			<b epub:type="z3998:personal-name">Ted Garvin</b> and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<b epub:type="z3998:personal-name">Ted Garvin</b> and <a href="https://www.pgdp.net">Distributed Proofreaders</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/57342">Project Gutenberg</a><br/>
 			and on digital scans from<br/>
