--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -17,11 +17,11 @@
 			It was translated from Greek in 1853 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Charles_Duke_Yonge"><abbr epub:type="z3998:given-name">C. D.</abbr> Yonge</a>.</p>
 			<p>This ebook was produced for<br/>
-			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
+			<a href="https://standardebooks.org/">Standard Ebooks</a><br/>
 			by<br/>
 			<a href="https://sniggle.net/TPL/">David <abbr epub:type="z3998:given-name">M.</abbr> Gross</a>,<br/>
 			and is based on a transcription produced in 2018 by<br/>
-			<b epub:type="z3998:personal-name">Ted Garvin</b> and <a href="https://www.pgdp.net">Distributed Proofreaders</a><br/>
+			<b epub:type="z3998:personal-name">Ted Garvin</b> and <a href="https://www.pgdp.net/">Distributed Proofreaders</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/57342">Project Gutenberg</a><br/>
 			and on digital scans from<br/>
@@ -33,12 +33,12 @@
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
-			<a href="https://www.theleagueofmoveabletype.com">The League of Moveable Type</a>.</p>
+			<a href="https://www.theleagueofmoveabletype.com/">The League of Moveable Type</a>.</p>
 			<p>The first edition of this ebook was released on<br/>
 			<b>May 2, 2020, 6:23 <abbr class="eoc">p.m.</abbr></b><br/>
 			You can check for updates to this ebook, view its revision history, or download it for different ereading systems at<br/>
 			<a href="https://standardebooks.org/ebooks/diogenes-laertius/the-lives-and-opinions-of-eminent-philosophers/c-d-yonge">standardebooks.org/ebooks/diogenes-laertius/the-lives-and-opinions-of-eminent-philosophers/c-d-yonge</a>.</p>
-			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org">standardebooks.org</a>.</p>
+			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org/">standardebooks.org</a>.</p>
 		</section>
 	</body>
 </html>
