--- a/src/epub/text/book-2.xhtml
+++ b/src/epub/text/book-2.xhtml
@@ -510,7 +510,7 @@
 						<br/>
 						<span>You would deserve your name of Cronus<a href="endnotes.xhtml#note-28" id="noteref-28" epub:type="noteref">28</a> better,</span>
 						<br/>
-						<span class="i1">If C and r were gone.</span>
+						<span class="i1">If <i epub:type="z3998:grapheme">C</i> and <i epub:type="z3998:grapheme">r</i> were gone.</span>
 					</p>
 				</blockquote>
 				<p>One of the successors of Euclides was Icthyas, the son of Metellus, a man of great eminence, to whom Diogenes the Cynic addressed a dialogue. And Clinomachus of Thurii, who was the first person who ever wrote about axioms and categorems, and things of that kind. And Stilpo the Megarian, a most illustrious philosopher, whom we must now speak of.</p>
